--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ rvm:
   - 2.4.2
 addons:
   postgresql: '9.4'
-before_install: gem install bundler -v 1.16.4
+before_install:
+- gem install bundler -v 1.16.4
+- source ${TRAVIS_BUILD_DIR}/tools/ci/create_db_user.sh
+before_script: bundle exec rake spec:setup
