change supported versions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,13 +12,20 @@ jobs:
     strategy:
       matrix:
         ruby-version:
-        - '2.5'
-        - '2.6'
         - '2.7'
+        - '3.0'
         rails-version:
-        - '5.2'
-        - '6.0'
+        # rails 6.1 supports ruby >= 2.5
         - '6.1'
+        include:
+        # rails 5.2 (EOL 6/22) supports ruby < 2.7 (2.6 EOL 3/22)
+        - ruby-version: '2.5'
+          rails-version: '5.2'
+        # rails 6.0 (security EOL 6/23?) supports ruby < 2.8 (2.7 EOL 3/23?;)
+        - ruby-version: '2.6'
+          rails-version: '6.0'
+        - ruby-version: '2.7'
+          rails-version: '6.0'
     services:
       postgres:
         image: manageiq/postgresql:10
