--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,9 @@ jobs:
         - '3.0'
         rails-version:
         # rails 6.1 supports ruby >= 2.5
+        # rails 7.0 supports ruby >= 2.7
         - '6.1'
+        - '7.0'
         include:
         # rails 5.2 (EOL 6/22) supports ruby < 2.7 (2.6 EOL 3/22)
         - ruby-version: '2.5'
