--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,22 +12,17 @@ jobs:
     strategy:
       matrix:
         ruby-version:
-        - '2.7'
         - '3.0'
         - '3.1'
         - '3.2'
+        - '3.3'
         rails-version:
-        # rails 6.1 supports ruby >= 2.5
-        # rails 7.0 supports ruby >= 2.7
-        - '6.1'
         - '7.0'
         - '7.1'
-        include:
-        # rails 6.0 (security EOL 6/23?) supports ruby < 2.8 (2.7 EOL 3/23?;)
-        - ruby-version: '2.6'
-          rails-version: '6.0'
-        - ruby-version: '2.7'
-          rails-version: '6.0'
+        - '7.2'
+        exclude:
+        - ruby-version: '3.0'
+          rails-version: '7.2'
     services:
       postgres:
         image: manageiq/postgresql:13
